--- a/css-demo/public/index.html
+++ b/css-demo/public/index.html
@@ -32,7 +32,8 @@
     </nav>
 
 	<div class="container">
-		<h1>2015 Big Hair Concerts</h1>
+        <h1><span id="img_container"></span>This image required in (app.js)</h1>
+        <h3><span><img class="bg_header_img"></span>This image via inline CSS bg image (app.css)</h3>
 
 		<table class="table table-striped">
 			<thead>
