--- a/tools/public/index.html
+++ b/tools/public/index.html
@@ -1,5 +1,5 @@
 <html>
     <body>
-        <script src="/public/assets/js/bundle.js"></script>
+        <script src="/public/assets/bundle.js"></script>
     </body>
 </html>
