creating global variables using plugins

--- a/tools/public/index.html
+++ b/tools/public/index.html
@@ -1,5 +1,7 @@
 <html>
     <body>
+        <h1>test</h1>
+        <div id="testDiv">Initial content</div>
         <script src="/public/assets/bundle.js"></script>
     </body>
 </html>
