--- a/webpack-angular1/public/index.html
+++ b/webpack-angular1/public/index.html
@@ -1,5 +1,10 @@
+<!DOCTYPE html>
 <html ng-app="app">
+    <head>
+    <title></title>
+    </head
     <body>
-        <script src="/public/assets/js/bundle.js"></script>
+        <band-info></band-info>
+        <script type="text/javascript" src="/public/assets/js/bundle.js"></script>
     </body>
 </html>
